maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:44: error: value &&! is not a member of Boolean
	while(virage!=0&&!estSurBiscuit){
                       ^